datagramdb-visualizer/src/main/java/antlr4/datagramqlParser.java
// Generated from java-escape by ANTLR 4.11.1
package antlr4;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class datagramqlParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.11.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, WHERE=31, 
		IF=32, THEN=33, ELSE=34, AS=35, VEC=36, REWRITE_TO=37, FORALL=38, QM=39, 
		EQ=40, STAR=41, LPAR=42, RPAR=43, COL=44, QPAR=45, PPAR=46, EscapedString=47, 
		OTHERS=48, SPACE=49, COMMENT=50, LINE_COMMENT=51;
	public static final int
		RULE_all_matches = 0, RULE_node = 1, RULE_centralmatch = 2, RULE_many_edges = 3, 
		RULE_rewrite_to = 4, RULE_rewrite_expr = 5, RULE_test_expr = 6, RULE_test_expr_side = 7, 
		RULE_edge = 8, RULE_edge_joining = 9, RULE_edgelabel = 10, RULE_multiple_labels = 11;
	private static String[] makeRuleNames() {
		return new String[] {
			"all_matches", "node", "centralmatch", "many_edges", "rewrite_to", "rewrite_expr", 
			"test_expr", "test_expr_side", "edge", "edge_joining", "edgelabel", "multiple_labels"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "';'", "'del'", "'new'", "'set'", "'\\uD835\uDF09'", "'@'", "'\\u2113'", 
			"'\\uD835\uDF0B'", "'\\u03C6'", "','", "'label'", "'src'", "'dst'", "'over'", 
			"'SCRIPT'", "'\\u2260'", "'<'", "'\\u2264'", "'\\u2228'", "'\\u2227'", 
			"'TEST'", "'unmatched'", "'.'", "'matched'", "'FILL'", "'--'", "'->'", 
			"'<-'", "'hook'", "'||'", "'where'", "'if'", "'then'", "'else'", "'as'", 
			"'>>'", "'\\u21AA'", "'\\u2200'", "'?'", "'='", "'*'", "'('", "')'", 
			"':'", "'['", "']'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, "WHERE", "IF", "THEN", "ELSE", 
			"AS", "VEC", "REWRITE_TO", "FORALL", "QM", "EQ", "STAR", "LPAR", "RPAR", 
			"COL", "QPAR", "PPAR", "EscapedString", "OTHERS", "SPACE", "COMMENT", 
			"LINE_COMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "java-escape"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public datagramqlParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class All_matchesContext extends ParserRuleContext {
		public List<CentralmatchContext> centralmatch() {
			return getRuleContexts(CentralmatchContext.class);
		}
		public CentralmatchContext centralmatch(int i) {
			return getRuleContext(CentralmatchContext.class,i);
		}
		public All_matchesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_all_matches; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof datagramqlListener ) ((datagramqlListener)listener).enterAll_matches(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof datagramqlListener ) ((datagramqlListener)listener).exitAll_matches(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof datagramqlVisitor ) return ((datagramqlVisitor<? extends T>)visitor).visitAll_matches(this);
			else return visitor.visitChildren(this);
		}
	}

	public final All_matchesContext all_matches() throws RecognitionException {
		All_matchesContext _localctx = new All_matchesContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_all_matches);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(29);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(24);
					centralmatch();
					setState(25);
					match(T__0);
					}
					} 
				}
				setState(31);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			}
			setState(32);
			centralmatch();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class NodeContext extends ParserRuleContext {
		public Multiple_labelsContext var;
		public TerminalNode LPAR() { return getToken(datagramqlParser.LPAR, 0); }
		public TerminalNode RPAR() { return getToken(datagramqlParser.RPAR, 0); }
		public Multiple_labelsContext multiple_labels() {
			return getRuleContext(Multiple_labelsContext.class,0);
		}
		public TerminalNode STAR() { return getToken(datagramqlParser.STAR, 0); }
		public TerminalNode VEC() { return getToken(datagramqlParser.VEC, 0); }
		public TerminalNode COL() { return getToken(datagramqlParser.COL, 0); }
		public TerminalNode OTHERS() { return getToken(datagramqlParser.OTHERS, 0); }
		public NodeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_node; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof datagramqlListener ) ((datagramqlListener)listener).enterNode(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof datagramqlListener ) ((datagramqlListener)listener).exitNode(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof datagramqlVisitor ) return ((datagramqlVisitor<? extends T>)visitor).visitNode(this);
			else return visitor.visitChildren(this);
		}
	}

	public final NodeContext node() throws RecognitionException {
		NodeContext _localctx = new NodeContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_node);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(34);
			match(LPAR);
			setState(36);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==STAR) {
				{
				setState(35);
				match(STAR);
				}
			}

			setState(39);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==VEC) {
				{
				setState(38);
				match(VEC);
				}
			}

			setState(41);
			((NodeContext)_localctx).var = multiple_labels();
			setState(44);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==COL) {
				{
				setState(42);
				match(COL);
				setState(43);
				match(OTHERS);
				}
			}

			setState(46);
			match(RPAR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CentralmatchContext extends ParserRuleContext {
		public Token var;
		public NodeContext src;
		public Many_edgesContext e1;
		public NodeContext dst;
		public TerminalNode EQ() { return getToken(datagramqlParser.EQ, 0); }
		public TerminalNode OTHERS() { return getToken(datagramqlParser.OTHERS, 0); }
		public List<NodeContext> node() {
			return getRuleContexts(NodeContext.class);
		}
		public NodeContext node(int i) {
			return getRuleContext(NodeContext.class,i);
		}
		public List<Edge_joiningContext> edge_joining() {
			return getRuleContexts(Edge_joiningContext.class);
		}
		public Edge_joiningContext edge_joining(int i) {
			return getRuleContext(Edge_joiningContext.class,i);
		}
		public TerminalNode WHERE() { return getToken(datagramqlParser.WHERE, 0); }
		public Test_exprContext test_expr() {
			return getRuleContext(Test_exprContext.class,0);
		}
		public TerminalNode REWRITE_TO() { return getToken(datagramqlParser.REWRITE_TO, 0); }
		public Many_edgesContext many_edges() {
			return getRuleContext(Many_edgesContext.class,0);
		}
		public List<Rewrite_toContext> rewrite_to() {
			return getRuleContexts(Rewrite_toContext.class);
		}
		public Rewrite_toContext rewrite_to(int i) {
			return getRuleContext(Rewrite_toContext.class,i);
		}
		public CentralmatchContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_centralmatch; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof datagramqlListener ) ((datagramqlListener)listener).enterCentralmatch(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof datagramqlListener ) ((datagramqlListener)listener).exitCentralmatch(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof datagramqlVisitor ) return ((datagramqlVisitor<? extends T>)visitor).visitCentralmatch(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CentralmatchContext centralmatch() throws RecognitionException {
		CentralmatchContext _localctx = new CentralmatchContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_centralmatch);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(48);
			((CentralmatchContext)_localctx).var = match(OTHERS);
			setState(49);
			match(EQ);
			setState(50);
			((CentralmatchContext)_localctx).src = node();
			setState(52);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__25 || _la==T__27) {
				{
				setState(51);
				((CentralmatchContext)_localctx).e1 = many_edges();
				}
			}

			setState(57);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==LPAR) {
				{
				{
				setState(54);
				edge_joining();
				}
				}
				setState(59);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(62);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==WHERE) {
				{
				setState(60);
				match(WHERE);
				setState(61);
				test_expr(0);
				}
			}

			setState(72);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==REWRITE_TO) {
				{
				setState(64);
				match(REWRITE_TO);
				setState(68);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (((_la) & ~0x3f) == 0 && ((1L << _la) & 28L) != 0) {
					{
					{
					setState(65);
					rewrite_to();
					}
					}
					setState(70);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(71);
				((CentralmatchContext)_localctx).dst = node();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Many_edgesContext extends ParserRuleContext {
		public List<EdgeContext> edge() {
			return getRuleContexts(EdgeContext.class);
		}
		public EdgeContext edge(int i) {
			return getRuleContext(EdgeContext.class,i);
		}
		public Many_edgesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_many_edges; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof datagramqlListener ) ((datagramqlListener)listener).enterMany_edges(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof datagramqlListener ) ((datagramqlListener)listener).exitMany_edges(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof datagramqlVisitor ) return ((datagramqlVisitor<? extends T>)visitor).visitMany_edges(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Many_edgesContext many_edges() throws RecognitionException {
		Many_edgesContext _localctx = new Many_edgesContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_many_edges);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(75); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(74);
				edge();
				}
				}
				setState(77); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==T__25 || _la==T__27 );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Rewrite_toContext extends ParserRuleContext {
		public Rewrite_toContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_rewrite_to; }
	 
		public Rewrite_toContext() { }
		public void copyFrom(Rewrite_toContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class Del_node_or_edgeContext extends Rewrite_toContext {
		public TerminalNode OTHERS() { return getToken(datagramqlParser.OTHERS, 0); }
		public Del_node_or_edgeContext(Rewrite_toContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof datagramqlListener ) ((datagramqlListener)listener).enterDel_node_or_edge(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof datagramqlListener ) ((datagramqlListener)listener).exitDel_node_or_edge(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof datagramqlVisitor ) return ((datagramqlVisitor<? extends T>)visitor).visitDel_node_or_edge(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class Update_exprContext extends Rewrite_toContext {
		public Rewrite_exprContext to;
		public Rewrite_exprContext from;
		public TerminalNode AS() { return getToken(datagramqlParser.AS, 0); }
		public List<Rewrite_exprContext> rewrite_expr() {
			return getRuleContexts(Rewrite_exprContext.class);
		}
		public Rewrite_exprContext rewrite_expr(int i) {
			return getRuleContext(Rewrite_exprContext.class,i);
		}
		public Update_exprContext(Rewrite_toContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof datagramqlListener ) ((datagramqlListener)listener).enterUpdate_expr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof datagramqlListener ) ((datagramqlListener)listener).exitUpdate_expr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof datagramqlVisitor ) return ((datagramqlVisitor<? extends T>)visitor).visitUpdate_expr(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class Neu_objContext extends Rewrite_toContext {
		public Token dst;
		public TerminalNode OTHERS() { return getToken(datagramqlParser.OTHERS, 0); }
		public Neu_objContext(Rewrite_toContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof datagramqlListener ) ((datagramqlListener)listener).enterNeu_obj(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof datagramqlListener ) ((datagramqlListener)listener).exitNeu_obj(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof datagramqlVisitor ) return ((datagramqlVisitor<? extends T>)visitor).visitNeu_obj(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Rewrite_toContext rewrite_to() throws RecognitionException {
		Rewrite_toContext _localctx = new Rewrite_toContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_rewrite_to);
		try {
			setState(88);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__1:
				_localctx = new Del_node_or_edgeContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(79);
				match(T__1);
				setState(80);
				match(OTHERS);
				}
				break;
			case T__2:
				_localctx = new Neu_objContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(81);
				match(T__2);
				setState(82);
				((Neu_objContext)_localctx).dst = match(OTHERS);
				}
				break;
			case T__3:
				_localctx = new Update_exprContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(83);
				match(T__3);
				setState(84);
				((Update_exprContext)_localctx).to = rewrite_expr();
				setState(85);
				match(AS);
				setState(86);
				((Update_exprContext)_localctx).from = rewrite_expr();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Rewrite_exprContext extends ParserRuleContext {
		public Rewrite_exprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_rewrite_expr; }
	 
		public Rewrite_exprContext() { }
		public void copyFrom(Rewrite_exprContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class Node_containmentContext extends Rewrite_exprContext {
		public Rewrite_exprContext key;
		public Rewrite_exprContext nodeVar;
		public List<Rewrite_exprContext> rewrite_expr() {
			return getRuleContexts(Rewrite_exprContext.class);
		}
		public Rewrite_exprContext rewrite_expr(int i) {
			return getRuleContext(Rewrite_exprContext.class,i);
		}
		public Node_containmentContext(Rewrite_exprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof datagramqlListener ) ((datagramqlListener)listener).enterNode_containment(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof datagramqlListener ) ((datagramqlListener)listener).exitNode_containment(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof datagramqlVisitor ) return ((datagramqlVisitor<? extends T>)visitor).visitNode_containment(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class Node_propContext extends Rewrite_exprContext {
		public Rewrite_exprContext key;
		public Rewrite_exprContext nodeVar;
		public List<Rewrite_exprContext> rewrite_expr() {
			return getRuleContexts(Rewrite_exprContext.class);
		}
		public Rewrite_exprContext rewrite_expr(int i) {
			return getRuleContext(Rewrite_exprContext.class,i);
		}
		public Node_propContext(Rewrite_exprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof datagramqlListener ) ((datagramqlListener)listener).enterNode_prop(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof datagramqlListener ) ((datagramqlListener)listener).exitNode_prop(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof datagramqlVisitor ) return ((datagramqlVisitor<? extends T>)visitor).visitNode_prop(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class Ifte_exprContext extends Rewrite_exprContext {
		public Test_exprContext ifcond;
		public Rewrite_exprContext then_effect;
		public Rewrite_exprContext else_effect;
		public TerminalNode IF() { return getToken(datagramqlParser.IF, 0); }
		public TerminalNode LPAR() { return getToken(datagramqlParser.LPAR, 0); }
		public TerminalNode RPAR() { return getToken(datagramqlParser.RPAR, 0); }
		public TerminalNode OTHERS() { return getToken(datagramqlParser.OTHERS, 0); }
		public TerminalNode THEN() { return getToken(datagramqlParser.THEN, 0); }
		public Test_exprContext test_expr() {
			return getRuleContext(Test_exprContext.class,0);
		}
		public List<Rewrite_exprContext> rewrite_expr() {
			return getRuleContexts(Rewrite_exprContext.class);
		}
		public Rewrite_exprContext rewrite_expr(int i) {
			return getRuleContext(Rewrite_exprContext.class,i);
		}
		public TerminalNode ELSE() { return getToken(datagramqlParser.ELSE, 0); }
		public Ifte_exprContext(Rewrite_exprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof datagramqlListener ) ((datagramqlListener)listener).enterIfte_expr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof datagramqlListener ) ((datagramqlListener)listener).exitIfte_expr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof datagramqlVisitor ) return ((datagramqlVisitor<? extends T>)visitor).visitIfte_expr(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class Edge_srcContext extends Rewrite_exprContext {
		public Rewrite_exprContext edgeVar;
		public Rewrite_exprContext rewrite_expr() {
			return getRuleContext(Rewrite_exprContext.class,0);
		}
		public Edge_srcContext(Rewrite_exprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof datagramqlListener ) ((datagramqlListener)listener).enterEdge_src(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof datagramqlListener ) ((datagramqlListener)listener).exitEdge_src(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof datagramqlVisitor ) return ((datagramqlVisitor<? extends T>)visitor).visitEdge_src(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class Edge_dstContext extends Rewrite_exprContext {
		public Rewrite_exprContext edgeVar;
		public Rewrite_exprContext rewrite_expr() {
			return getRuleContext(Rewrite_exprContext.class,0);
		}
		public Edge_dstContext(Rewrite_exprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof datagramqlListener ) ((datagramqlListener)listener).enterEdge_dst(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof datagramqlListener ) ((datagramqlListener)listener).exitEdge_dst(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof datagramqlVisitor ) return ((datagramqlVisitor<? extends T>)visitor).visitEdge_dst(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class Node_or_edgeContext extends Rewrite_exprContext {
		public TerminalNode OTHERS() { return getToken(datagramqlParser.OTHERS, 0); }
		public Node_or_edgeContext(Rewrite_exprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof datagramqlListener ) ((datagramqlListener)listener).enterNode_or_edge(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof datagramqlListener ) ((datagramqlListener)listener).exitNode_or_edge(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof datagramqlVisitor ) return ((datagramqlVisitor<? extends T>)visitor).visitNode_or_edge(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class Node_xiContext extends Rewrite_exprContext {
		public Token num;
		public Rewrite_exprContext nodeVar;
		public TerminalNode OTHERS() { return getToken(datagramqlParser.OTHERS, 0); }
		public Rewrite_exprContext rewrite_expr() {
			return getRuleContext(Rewrite_exprContext.class,0);
		}
		public Node_xiContext(Rewrite_exprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof datagramqlListener ) ((datagramqlListener)listener).enterNode_xi(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof datagramqlListener ) ((datagramqlListener)listener).exitNode_xi(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof datagramqlVisitor ) return ((datagramqlVisitor<? extends T>)visitor).visitNode_xi(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class Just_parContext extends Rewrite_exprContext {
		public TerminalNode LPAR() { return getToken(datagramqlParser.LPAR, 0); }
		public Rewrite_exprContext rewrite_expr() {
			return getRuleContext(Rewrite_exprContext.class,0);
		}
		public TerminalNode RPAR() { return getToken(datagramqlParser.RPAR, 0); }
		public Just_parContext(Rewrite_exprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof datagramqlListener ) ((datagramqlListener)listener).enterJust_par(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof datagramqlListener ) ((datagramqlListener)listener).exitJust_par(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof datagramqlVisitor ) return ((datagramqlVisitor<? extends T>)visitor).visitJust_par(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class Node_ellContext extends Rewrite_exprContext {
		public Token num;
		public Rewrite_exprContext nodeVar;
		public TerminalNode OTHERS() { return getToken(datagramqlParser.OTHERS, 0); }
		public Rewrite_exprContext rewrite_expr() {
			return getRuleContext(Rewrite_exprContext.class,0);
		}
		public Node_ellContext(Rewrite_exprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof datagramqlListener ) ((datagramqlListener)listener).enterNode_ell(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof datagramqlListener ) ((datagramqlListener)listener).exitNode_ell(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof datagramqlVisitor ) return ((datagramqlVisitor<? extends T>)visitor).visitNode_ell(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class Edge_labelContext extends Rewrite_exprContext {
		public Rewrite_exprContext edgeVar;
		public Rewrite_exprContext rewrite_expr() {
			return getRuleContext(Rewrite_exprContext.class,0);
		}
		public Edge_labelContext(Rewrite_exprContext ctx) { copyFrom(ctx); }
		@Override
